# posemath

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  libposemath.pc.in
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Doxyfile
doc/doxygen/: doxygen_sqlite3.db
doc/doxygen/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d4b43312a1a79646b1fec674dcb3fc91.html  dir_d4b43312a1a79646b1fec674dcb3fc91_dep.map  dir_d4b43312a1a79646b1fec674dcb3fc91_dep.md5  files.html  graph_legend.html  index.html  mathprnt_8h_source.html  posemath_8h_source.html  sincos_8h_source.html  structPmCartesian-members.html  structPmCartesian.html  structPmCircle-members.html  structPmCircle.html  structPmCircle__coll__graph.map  structPmCircle__coll__graph.md5  structPmCylindrical-members.html  structPmCylindrical.html  structPmEulerZyx-members.html  structPmEulerZyx.html  structPmEulerZyz-members.html  structPmEulerZyz.html  structPmHomogeneous-members.html  structPmHomogeneous.html  structPmHomogeneous__coll__graph.map  structPmHomogeneous__coll__graph.md5  structPmLine-members.html  structPmLine.html  structPmLine__coll__graph.map  structPmLine__coll__graph.md5  structPmPose-members.html  structPmPose.html  structPmPose__coll__graph.map  structPmPose__coll__graph.md5  structPmQuaternion-members.html  structPmQuaternion.html  (+14 more)
doc/doxygen/html/search/: all_0.js
doc/doxygen/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d4b43312a1a79646b1fec674dcb3fc91.tex  refman.tex  structPmCartesian.tex  structPmCircle.tex  structPmCircle__coll__graph.md5  structPmCylindrical.tex  structPmEulerZyx.tex  structPmEulerZyz.tex  structPmHomogeneous.tex  structPmHomogeneous__coll__graph.md5  structPmLine.tex  structPmLine__coll__graph.md5  structPmPose.tex  structPmPose__coll__graph.md5  structPmQuaternion.tex  structPmRotationMatrix.tex  structPmRotationMatrix__coll__graph.md5  structPmRotationVector.tex  structPmRpy.tex  structPmSpherical.tex  structPmXya.tex  structVECTOR.tex
src/: Makefile
src/posemath/: _mathprnt.c  mathprnt.cc  mathprnt.h  posemath.cc  posemath.h  sincos.c  sincos.h  testcirc.c  testpmc.c  testpmcpp.cc
